# lib/api-spec/openapi.yaml
@@ -430,6 +430,8 @@ components:
           type: string
         city:
           type: string
+        division:
+          type: string
         primaryColor:
           type: string
         secondaryColor:
@@ -439,6 +441,8 @@ components:
         wins:
           type: integer
         losses:
+          type: integer
+        otLosses:
           type: integer
         points:
           type: integer
@@ -453,10 +457,12 @@ components:
         - name
         - abbreviation
         - city
+        - division
         - primaryColor
         - secondaryColor
         - wins
         - losses
+        - otLosses
         - points
         - goalsFor
         - goalsAgainst
@@ -485,6 +491,8 @@ components:
           type: string
         city:
           type: string
+        division:
+          type: string
         primaryColor:
           type: string
         secondaryColor:
@@ -495,6 +503,7 @@ components:
         - name
         - abbreviation
         - city
+        - division
         - primaryColor
         - secondaryColor
 
@@ -580,11 +589,15 @@ components:
           type: string
         teamAbbreviation:
           type: string
+        division:
+          type: string
         primaryColor:
           type: string
         wins:
           type: integer
         losses:
+          type: integer
+        otLosses:
           type: integer
         points:
           type: integer
@@ -599,9 +612,11 @@ components:
         - teamId
         - teamName
         - teamAbbreviation
+        - division
         - primaryColor
         - wins
         - losses
+        - otLosses
         - points
         - goalsFor
         - goalsAgainst
